--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,8 @@
         </div>
 
         <div class="footer">
-            <p><strong>Prepared by:</strong> Angelica and Julia Mae</p>
+            <p><strong>Prepared by:</strong> Angelica and Julia Mae
+            </p>
             <p><strong>Project:</strong> Learning Management System (LMS)</p>
             <p><strong>Date:</strong> December 2025</p>
         </div>
